samples/_failures_safe/1761709541_aaeba3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9d95e36.c: In function ‘main’:
./samples/SAFE/__tmp_d9d95e36.c:152:5: error: expected declaration or statement at end of input
  152 |     print_matrix(&a, "A");
      |     ^~~~~~~~~~~~
